# lcsr_controllers

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/lcsr_controllers/: inertia_utils.h
msg/: AttachedInertia.msg  Inertia.msg
scripts/: attached_inertia.py  follow_joint_trajectory_action.py  heartbeat_mux.py  joint_limit_monitor.py  singularity_rescuer.py
src/: cartesian_logistic_servo.cpp  cartesian_logistic_servo.h  coulomb_compensator.cpp  coulomb_compensator.h  id_controller_kdl.cpp  id_controller_kdl.h  ik_controller.cpp  ik_controller.h  inertia_utils.cpp  joint_pid_controller.cpp  joint_pid_controller.h  joint_setpoint.cpp  joint_setpoint.h  joint_traj_generator_kdl.cpp  joint_traj_generator_kdl.h  joint_traj_generator_rml.cpp  joint_traj_generator_rml.h  jt_nullspace_controller.cpp  jt_nullspace_controller.h  lcsr_controllers.cpp  semi_absolute_calibration_controller.cpp  semi_absolute_calibration_controller.h
src/friction/: README.md  hysteresis.kra  joint_friction_compensator_hss.cpp  joint_friction_compensator_hss.h
src/joint_traj_generator_rml/: README.md  joint_traj_generator_rml.cpp  joint_traj_generator_rml.h  tests.cpp
srv/: Calibrate.srv  Toggle.srv
