<package>
  <name>lcsr_controllers</name>
  <version>0.6.0</version>
  <license>BSD</license>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <author email="jbo@jhu.edu">Jonathan Bohren</author>
  <description>
    Get yourself under control, man.
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>eigen</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>conman</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt_rosparam</build_depend>
  <build_depend>rtt_actionlib</build_depend>
  <build_depend>rtt_ros_tools</build_depend>
  <build_depend>rtt_tf</build_depend>
  <build_depend>rtt_sensor_msgs</build_depend>
  <build_depend>rtt_control_msgs</build_depend>
  <build_depend>rtt_visualization_msgs</build_depend>
  <build_depend>rtt_telemanip_msgs</build_depend>
  <build_depend>kdl_typekit</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_urdf_tools</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>eigen_typekit</build_depend>
  <build_depend>reflexxes_type2</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>conman</run_depend>

  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>rtt_ros_tools</run_depend>
  <run_depend>rtt_rosparam</run_depend>
  <run_depend>rtt_tf</run_depend>
  <run_depend>rtt_sensor_msgs</run_depend>
  <run_depend>rtt_visualization_msgs</run_depend>
  <run_depend>kdl_typekit</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>kdl_urdf_tools</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>eigen_typekit</run_depend>
  <run_depend>reflexxes_type2</run_depend>
  <run_depend>rtt_telemanip_msgs</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_sensor_msgs</plugin_depend>
      <plugin_depend>rtt_trajectory_msgs</plugin_depend>
      <plugin_depend>rtt_visualization_msgs</plugin_depend>
      <plugin_depend>rtt_control_msgs</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_actionlib</plugin_depend>
      <plugin_depend>rtt_tf</plugin_depend>
    </rtt_ros>
  </export>
</package>
